Fix event wrap

--- a/src/scenes/Events/style.scss
+++ b/src/scenes/Events/style.scss
@@ -56,6 +56,7 @@
   display: flex;
   height: 100vh;
   overflow: auto;
+  flex-wrap: wrap;
   @include mobile {
     overflow: initial;
   }
